--- a/front/src/components/Navbar/Menu/style/index.scss
+++ b/front/src/components/Navbar/Menu/style/index.scss
@@ -26,27 +26,30 @@
   align-items: center;
 }
 
+$menu-panel-item-padding: 20px;
+
 .menu-panel-list {
   list-style: none;
-  padding: /* 20px */ 0;
+  padding: 0;
   margin: 0;
-  // background-color: green;
   .menu-panel-item {
     z-index: 1; // this fix a shadow glitch
     height: 50px;
     line-height: 50px;
-    padding: 0 0 0 20px;
-    transition: all 0.2s ease;
+    padding: 0 0 0 $menu-panel-item-padding;
     position: relative;
-    width: $menu-panel-size;
+    width: calc(#{$menu-panel-size} - #{$menu-panel-item-padding});
     cursor: pointer;
     display: block;
     text-decoration: none;
     color: $text-white;
+    transition: color 0.2s, background-color 0.2s, box-shadow 0.4s,
+      font-weight 0.2s, width 0.6s;
     &:hover {
-      background: $background-light;
+      width: $menu-panel-size;
+      background-color: $background-light;
       color: $black;
-      box-shadow: -15px 0 20px 0 $black;
+      box-shadow: -15px 0 15px 0 $black-light;
       font-weight: bold;
     }
   }
