--- a/front/src/theme/index.css
+++ b/front/src/theme/index.css
@@ -114,21 +114,24 @@
   height: 50px;
   line-height: 50px;
   padding: 0 0 0 20px;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
   position: relative;
-  width: 250px;
+  width: calc(250px - 20px);
   cursor: pointer;
   display: block;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.87);
+  -webkit-transition: color 0.2s, background-color 0.2s, font-weight 0.2s, width 0.6s, -webkit-box-shadow 0.4s;
+  transition: color 0.2s, background-color 0.2s, font-weight 0.2s, width 0.6s, -webkit-box-shadow 0.4s;
+  transition: color 0.2s, background-color 0.2s, box-shadow 0.4s, font-weight 0.2s, width 0.6s;
+  transition: color 0.2s, background-color 0.2s, box-shadow 0.4s, font-weight 0.2s, width 0.6s, -webkit-box-shadow 0.4s;
 }
 
 .menu-panel-list .menu-panel-item:hover {
-  background: #f4f4f4;
+  width: 250px;
+  background-color: #f4f4f4;
   color: #212121;
-  -webkit-box-shadow: -15px 0 20px 0 #212121;
-          box-shadow: -15px 0 20px 0 #212121;
+  -webkit-box-shadow: -15px 0 15px 0 #484848;
+          box-shadow: -15px 0 15px 0 #484848;
   font-weight: bold;
 }
 
