--- a/front/src/theme/index.scss
+++ b/front/src/theme/index.scss
@@ -4,3 +4,5 @@
 @import '../components//Navbar/Controls/style/index.scss';
 @import '../components//Navbar/Menu/style/index.scss';
 @import '../components//Navbar/Status/style/index.scss';
+
+@import '../pages/Home/style/index.scss';
