--- a/front/src/components/Navbar/Menu/style/_index.scss
+++ b/front/src/components/Navbar/Menu/style/_index.scss
@@ -32,6 +32,8 @@ $menu-panel-item-padding: 20px;
   list-style: none;
   padding: 0;
   margin: 0;
+  // display: flex;
+  // justify-content: space-around;
   .menu-panel-item {
     z-index: 1; // this fix a shadow glitch
     height: 50px;
