--- a/front/src/theme/index.css
+++ b/front/src/theme/index.css
@@ -1,3 +1,24 @@
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  /* line-height: 24px; */
+  /* font-weight: 400; */
+  margin: 0;
+  min-width: 320px;
+  max-width: 100vw;
+  min-height: 100vh;
+  /* font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%; */
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /* ----------------------------------------- */
 /* ----------------------------------------- */
 .navbar-container {
@@ -10,15 +31,9 @@
   background-color: #e02b20;
   height: 50px;
   position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   top: 0;
 }
 
@@ -36,35 +51,14 @@
   padding: 0 30px;
   width: calc(70% - 50px);
   left: 50px;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  justify-content: start;
 }
 
 .controls-container {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  color: #fafafa;
   display: flex;
-  padding: 0;
-  gap: 15px;
-}
-
-.control {
-  cursor: pointer;
-  color: rgba(255, 255, 255, 0.87);
-  text-decoration: none;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  border: 1px solid transparent;
-  position: relative;
-}
-
-.control:hover {
-  color: #f9d5d3;
-  border-bottom: 1px solid #fafafa;
-  border-top: 1px solid #fafafa;
-  text-shadow: 0 0 5px rgba(255, 255, 255, 0.87);
+  justify-content: space-around;
+  width: 50%;
 }
 
 .menu-open,
@@ -74,7 +68,6 @@
   width: 250px;
   height: calc(100vh - 50px);
   background-color: #ff654b;
-  -webkit-transition: left 0.3s ease;
   transition: left 0.3s ease;
 }
 
@@ -92,15 +85,9 @@
   width: 30px;
   background: transparent;
   height: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu-panel-list {
@@ -108,7 +95,6 @@
   padding: 0;
   margin: 0;
 }
-
 .menu-panel-list .menu-panel-item {
   z-index: 1;
   height: 50px;
@@ -120,18 +106,13 @@
   display: block;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.87);
-  -webkit-transition: color 0.2s, background-color 0.2s, font-weight 0.2s, width 0.6s, -webkit-box-shadow 0.4s;
-  transition: color 0.2s, background-color 0.2s, font-weight 0.2s, width 0.6s, -webkit-box-shadow 0.4s;
-  transition: color 0.2s, background-color 0.2s, box-shadow 0.4s, font-weight 0.2s, width 0.6s;
-  transition: color 0.2s, background-color 0.2s, box-shadow 0.4s, font-weight 0.2s, width 0.6s, -webkit-box-shadow 0.4s;
+  transition: color 0.2s, background-color 0.2s, box-shadow 0.4s, font-weight 0.2s, width 0.6s;
 }
-
 .menu-panel-list .menu-panel-item:hover {
   width: 250px;
   background-color: #f4f4f4;
   color: #212121;
-  -webkit-box-shadow: -15px 0 15px 0 #484848;
-          box-shadow: -15px 0 15px 0 #484848;
+  box-shadow: -15px 0 15px 0 #484848;
   font-weight: bold;
 }
 
@@ -141,20 +122,14 @@
 
 .inputs-container {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 60px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .input-container {
   width: 100%;
   height: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -170,13 +145,10 @@
   background: transparent;
   border: none;
   border-bottom: 1px solid #bdbdbd;
-  -webkit-transition: font 0.2s;
   transition: font 0.2s;
 }
-
 .input-element:focus {
   outline: none;
   font-size: 20px;
   letter-spacing: 1px;
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
